--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html2md",
   "version": "1.0.0",
   "description": "Generates Markdown from HTML",
-  "main": "html2md.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
-    "html-minifier": "^3.5.2"
+    "html-minifier": "^3.5.2",
+    "request": "^2.81.0"
   }
 }
