--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
-    "html-minifier": "^3.5.2",
+    "html-minifier": "^3.5.2"
+  },
+  "devDependencies": {
     "request": "^2.81.0"
   }
 }
