--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "html-minifier": "^3.5.2"
   },
   "devDependencies": {
+    "iconv-lite": "^0.4.18",
+    "jschardet": "^1.4.2",
+    "charset": "^1.0.0",
     "request": "^2.81.0"
   }
 }
