--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generates Markdown from HTML",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Martin Zilz",
   "license": "MIT",
@@ -13,9 +13,11 @@
     "html-minifier": "^3.5.2"
   },
   "devDependencies": {
+    "charset": "^1.0.0",
     "iconv-lite": "^0.4.18",
     "jschardet": "^1.4.2",
-    "charset": "^1.0.0",
-    "request": "^2.81.0"
+    "mocha": "^3.4.2",
+    "request": "^2.81.0",
+    "should": "^11.2.1"
   }
 }
