more test cases

--- a/test/samples/code.sample
+++ b/test/samples/code.sample
@@ -1,5 +1,21 @@
 section "Code":
 
+	case "should produce inline code":
+		in:
+		<div>Hallo <code>console.log("Hello World")</code> Welt</div>
+
+		out:
+		Hallo `console.log("Hello World")` Welt
+
+	case "should trim inline code":
+		in:
+		<div>Hallo <code>   console.log("Hello 
+		World")	</code> 
+		Welt</div>
+
+		out:
+		Hallo `console.log("Hello World")` Welt
+
 	case "should be trimmed":
 
 		in:
@@ -36,7 +52,7 @@ section "Code":
 			<li>Third</li>
 		</ul>
 		```
-				
+
 	case "should keep indentation":
 
 		in:
