--- a/test/samples/list.sample
+++ b/test/samples/list.sample
@@ -76,3 +76,41 @@ section "List":
 		   - Test
 		Test Wrapped
 		Test 2
+
+	case "simple ordered list":
+
+		in:
+		<ol>
+			<li>One</li>
+			<li>Two</li>
+			<li>Three</li>
+		</ol>
+
+		out:
+		1. One
+		2. Two
+		3. Three
+
+	case "ordered in unordered list":
+
+		in:
+		<ul>
+			<li>One</li>
+			<li>Two
+
+				<ol>
+					<li>One</li>
+					<li>Two</li>
+					<li>Three</li>
+				</ol>
+			</li>
+			<li>Three</li>
+
+		out:
+
+		- One
+		- Two
+		   1. One
+		   2. Two
+		   3. Three
+		- Three
