--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jschardet": "^1.4.2",
     "mocha": "^3.4.2",
     "request": "^2.81.0",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "marked": "^0.3.6"
   }
 }
