--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "Martin Zilz",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mofux/html2md.git"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
     "html-minifier": "^3.5.2"
